--- a/ucg_pathway_assessment_with_banner_bottom_info.html
+++ b/ucg_pathway_assessment_with_banner_bottom_info.html
@@ -123,6 +123,18 @@
 
     
     <div class="card" id="optional-info">
+
+<div class="card">
+      <div class="cta">
+        <button id="submitBtn">See My Results</button>
+        <button id="resetBtn" class="secondary">Reset</button>
+        <button id="printBtn" class="ghost">Print / Save PDF</button>
+        <button id="csvBtn" class="ghost">Download CSV</button>
+      </div>
+      <p class="hint">We don’t require personal info to see results. Add your name/grade/school/email if you want it on your summary. Checking the opt‑in box lets Urban Coders Guild email you about courses and events. You can unsubscribe anytime.</p>
+    </div>
+
+    <div class="card" id="optional-info">
       <h2>Optional: Save your results & get updates</h2>
       <p class="hint">Add your info if you want it on your PDF or to receive UCG updates. All fields are optional.</p>
       <div class="grid">
@@ -142,15 +154,6 @@
         <a href="https://urbancodersguild.org/privacy" target="_blank" rel="noopener">Privacy Policy</a>
       </label>
       <p id="privacyHint" class="hint">We respect your privacy. Your information will only be used by Urban Coders Guild to share program updates. We will never sell or share your data with third parties.</p>
-    </div>
-<div class="card">
-      <div class="cta">
-        <button id="submitBtn">See My Results</button>
-        <button id="resetBtn" class="secondary">Reset</button>
-        <button id="printBtn" class="ghost">Print / Save PDF</button>
-        <button id="csvBtn" class="ghost">Download CSV</button>
-      </div>
-      <p class="hint">We don’t require personal info to see results. Add your name/grade/school/email if you want it on your summary. Checking the opt‑in box lets Urban Coders Guild email you about courses and events. You can unsubscribe anytime.</p>
     </div>
 
     <div id="results" class="card hidden" aria-live="polite"></div>
